<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.popularmoviesstage1.DetailActivity">


        <ImageView
            android:id="@+id/image_iv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_picture"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_title_label"
            android:textStyle="bold"
            android:paddingLeft="@dimen/paddingLeft"

            />

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:paddingTop="@dimen/paddingTop"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_release_date_label"
            android:textStyle="bold"
            android:paddingLeft="@dimen/paddingLeft"

            />


        <TextView
            android:id="@+id/release_date_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:paddingTop="@dimen/paddingTop"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_vote_average_label"
            android:textStyle="bold"
            android:paddingLeft="@dimen/paddingLeft"

            />

        <TextView
            android:id="@+id/rating_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:paddingTop="@dimen/paddingTop"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_overview_label"
            android:textStyle="bold"
            android:paddingLeft="@dimen/paddingLeft"
            />


        <TextView
            android:id="@+id/overview_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:paddingTop="@dimen/paddingTop"

            />



</android.support.constraint.ConstraintLayout>
</ScrollView>
